# Chorus

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/chorus/: auth.py  config.py  llm.py  main.py  schemas.py
backend/src/chorus/api/: auth.py  credits.py  routes.py  sessions.py
backend/src/chorus/db/: database.py  models.py
backend/src/chorus/graph/: graph.py  state.py
backend/src/chorus/graph/nodes/: critic.py  planner.py  researcher.py  synthesizer.py
backend/src/chorus/security/: fetch_guard.py  untrusted.py
backend/src/chorus/services/: followup_router.py  rate_limit.py  run_registry.py
backend/tests/: test_fetch_guard.py  test_graph.py  test_schemas.py
frontend/: .prettierrc  Dockerfile  Dockerfile.dev  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(research)/: layout.tsx
frontend/src/app/(research)/home/: page.tsx
frontend/src/app/(research)/run/[id]/: page.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/run/[id]/: page.tsx
frontend/src/components/: AgentCard.tsx  AnglePreview.tsx  AuroraBackground.tsx  AuthBrandPanel.tsx  ConcurrentRunWarning.tsx  ContestedPoint.tsx  ConversationThread.tsx  CreditCounter.tsx  CreditWarning.tsx  CritiqueView.tsx  FindingCard.tsx  FollowUpInput.tsx  MiniAgentCard.tsx  PipelineFollowUp.tsx  PipelineStatusStrip.tsx  PipelineViz.tsx  ReasoningResponse.tsx  ReportView.tsx  SessionSidebar.tsx  SourcesList.tsx
frontend/src/lib/: agentDisplay.ts  api.ts  auth-store.ts  confidence.ts  store.ts  useDialogA11y.ts  websocket.ts
frontend/src/types/: events.ts
