[project]
name = "chorus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "bcrypt>=4.0,<4.1",
    "fastapi>=0.138.0",
    "greenlet>=3.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "passlib[bcrypt]>=1.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.9",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=26.1.0",
    "tavily-python>=0.7.26",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chorus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
[tool.ruff]
line-length = 100
[tool.mypy]
strict = true
